Fix button alignment

--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -156,6 +156,7 @@ a {
         margin-left: 240px;
     }
 
+    .section--treemap-inline &,
     .section--treemap-small & {
         margin-left: 0;
     }
